fix: text alignment

--- a/src/styles/Clubs.css
+++ b/src/styles/Clubs.css
@@ -57,6 +57,7 @@
   font-weight: 400;
   font-size: 0.8rem;
   opacity: 0.7;
+  padding-top: 0.45rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -91,11 +92,11 @@
   }
 
   .club-host {
-    font-size: 0.95rem;
+    font-size: 1rem;
   }
 
   .club-access {
     margin-left: auto;
-    font-size: 0.85rem;
+    font-size: 0.9rem;
   }
 }
